test/mutation_analysis/s0941_valid_mountain_array/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0941_valid_mountain_array/hafis/ablation_o3_r50/mutants/6/Solution.java:16: error: unreachable statement
        for (; false; i++) {
                           ^
1 error
